Add entry for izfaruqi from backend

--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
                 </div>
             </div>
             <!-- Until this line -->
+            <!-- Copy from this line -->
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://github.com/izfaruqi.png" />
+                </div>
+                <div class="card-body">
+                    <span class="tag tag-teal">BACK END</span>
+                    <h3>Ibrahim Faruqi</h3>
+                    <p>
+                        A backend developer that really wants to learn design, but isn't there yet (｡╯︵╰｡)
+                    </p>
+                    <div class="sosmed">
+                        <a href="https://github.com/izfaruqi">
+                            <i class="bi-github" style="font-size: 1.8rem; color: black;"></i>
+                        </a>
+                        <a href="https://instagram.com/iz.faruqi">
+                            <i class="bi-instagram" style="font-size: 1.8rem; color: black;"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Until this line -->
         </div>
     </div>
 </body>
