--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <!-- Copy from this line -->
             <div class="card">
                 <div class="card-header">
-                    <img src="https://imgur.com/a/7hh0Hoz" />
+                    <img src="https://imgur.com/dnv3rfi" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-teal">BACK END</span>
