--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <span class="tag tag-teal">BACK END</span>
                     <h3>Muh Zaqi Ikhwanul Kiram</h3>
                     <p>
-                        Seseorang yang asbtrak.
+                        Belajar dan bermain...
                     </p>
                     <div class="sosmed">
                         <a href="https://github.com/zaqiikhwan">
