Ganti Picture Bagas v.2

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
                         <!-- Copy from this line -->
                         <div class="card">
                             <div class="card-header">
-                                <img src="https://i.ibb.co/Bs0pprZ/daffa.png" />
+                                <img src="https://ibb.co/942Vrzj" />
                             </div>
                             <div class="card-body">
                                 <span class="tag tag-teal">Back End</span>
                                 <h3>Bagas Raditya Nafi</h3>
                                 <p>
-                                    nobody
+                                    Deskripsi ini agak ngasal memang.
                                 </p>
                                 <div class="sosmed">
                                     <a href="https://github.com/bagasrna">
